--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,7 +21,7 @@
           <!--Estou interpolando meu nome com a varialve nome -->
         
         <li class="nav-item pl-3">
-            <a href=""> <!--<a href=""></a>(PAra tranformar em um link basta criar essa tag <a> e colocar dentro dela o que quero transformar em link )  -->
+            <a [routerLink]="['/user-edit', id]"> <!--<a href=""></a>(PAra tranformar em um link basta criar essa tag <a> e colocar dentro dela o que quero transformar em link )  O HREF FOI TROCADO POR: -->
                 <p  class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></p>
             </a>
         </li>
