--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -59,6 +59,16 @@
     <div class="tab-content mt-5" id="nav-tabContent">
     
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="titulo" placeholder="Digite um titulo de postagem para pesquisar" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()' >
+                    </div>
+                </div>
+            </div>
+
+
             <!--Conteudo da postagem "TODAS AS POSTAGENS"-->
             <!--CARD 1-->
             <div class="card-columns">
@@ -114,6 +124,18 @@
         </div>
         
         <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+
+
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="titulo" placeholder="Digite um tema para pesquisar" [(ngModel)]='nomeTema' (keyup)='findByNomeTema()' >
+                    </div>
+                </div>
+            </div>
+
+
+
             <!--Conteudo da postagem "POSTAGEM POR TEMA"-->
             <!--CARD 3-->     
             <div class="card-columns" *ngFor='let tema of listaTemas | orderBy : key : reverse'>
